# automate_profiles

./: .gitignore  README.md
cursor-sh_ide/: README.md  cursor_linux_id_modifier.sh  cursor_reset.py  cursor_test.py
ds-init-local/: README.md  dataScience-shortcuts.sh  ds-project-structure.sh
dsi-config/: README.md  pyproject.toml  requirements.txt  setup_project.py
dsi-config-vscode/: ds-init-project.py
ollama/: README.md  ollama_service_manager.py  ollama_utils.py  requirements.txt  setup_env.py  setup_ollama.py  uninstall_ollama.py
ollama/tests/: README.md  requirements-test.txt  run_tests.py  test_ollama_service_manager.py  test_ollama_utils.py  test_setup_uninstall.py
project_env-dependencies/: README.md  additional_requirements.txt  install_additional_packages.py
